fixed my docs
